Fix styling on mobile

--- a/less/app.less
+++ b/less/app.less
@@ -54,7 +54,6 @@ li:before {
 }
 
 .welcome-section {
-    height: 100vh;
     text-align: center;
     margin-top: 20vh;
     
